Probelm set 2 finished

--- a/code/ps1.ipynb
+++ b/code/ps1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:dcb32093147eea4a2cfcee01bd0d24e974090ea4fa00a3ecd30ab593985f4e03"
+  "signature": "sha256:099c738953f1bd0f579510af36a74896ca217860360ec5f0dfd8a5899df3de76"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -575,7 +575,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "A Glottal signal has even and odd harmonics and drops off at a rate of 1/f^2"
+      "A Glottal signal has even and odd harmonics and drops off at a rate of 1/f^2\n",
+      "\n",
+      "INTEGRATING IS THE SAME AS APPLYING A 1/f filter\n"
      ]
     }
    ],
